--- a/hellomodule/build.gradle
+++ b/hellomodule/build.gradle
@@ -3,12 +3,16 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
+    maven { url 'http://repo1.maven.org/maven2/' }
     mavenCentral()
 }
 
 dependencies {
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5'
+    compile 'mysql:mysql-connector-java:5.1.35'
+    compile 'org.projectlombok:lombok:1.16.6'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
